@@ -2,6 +2,7 @@
 
 * Added import checks in auth.py.
 * Added test case for auth imports.
+* Fixed up the import unit tests with reloads.
 
 2009.11.07
 
